--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
         <div class="intro">
           <h1>Caleb Niyomukiza</h1>
           <p>
-            Lorem ipsum dolor sit amest, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+           A software engineer skilled in Front-end and Full-stack technologies. I specialize in building web applications, working with cloud platforms and developing APIs. Passionate about technology and collaboration. Let’s connect!
           </p>
           <div class="btn">
-            <a href="#">Let's get started</a>
+            <a href="#">Download CV</a>
             <i class="fa fa-chevron-right"></i>
           </div>
     
